--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,90 @@
-node_modules
-dist
+# Dependencies
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# Build outputs
+dist/
+build/
+*.tsbuildinfo
+
+# Environment variables (CRITICAL - contiene credenciales)
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Logs
+logs/
+*.log
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+*.lcov
+.nyc_output
+
+# IDE and editor files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Docker (mantener docker-compose.yml pero ignorar overrides locales)
+docker-compose.override.yml
+
+# Database files
+*.db
+*.sqlite
+*.sqlite3
+dump/
+
+# Temporary files
+tmp/
+temp/
+.cache/
+
+# Secrets and certificates (NUNCA commitear!)
+*.pem
+*.key
+*.crt
+*.cert
+*.p12
+*.pfx
+secrets/
+*.secret
+
+# Cloud provider configs
+.azure/
+.aws/
+.gcloud/
+
+# Local development
+.local/
+local/
+
+# Testing
+.jest/
+coverage/
+
+# Misc
+.eslintcache
+.prettiercache
