--- a/package.json
+++ b/package.json
@@ -6,14 +6,25 @@
   "type": "module",
   "scripts": {
     "start": "node dist/index.js",
-    "build": "tsc"
+    "build": "tsc",
+    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "dev:watch": "nodemon --exec ts-node src/index.ts",
+    "build:watch": "tsc --watch",
+    "clean": "rimraf dist",
+    "prebuild": "npm run clean",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "echo \"Linting not configured yet\"",
+    "docker:build": "docker build -t ms1-customer-service .",
+    "docker:run": "docker run -p 3000:3000 ms1-customer-service"
   },
   "dependencies": {
+    "@types/cors": "^2.8.19",
     "accepts": "^2.0.0",
     "acorn": "^8.15.0",
     "acorn-walk": "^8.3.4",
     "anymatch": "^3.1.3",
     "arg": "^4.1.3",
+    "axios": "^1.12.2",
     "balanced-match": "^1.0.2",
     "binary-extensions": "^2.3.0",
     "body-parser": "^2.2.0",
@@ -29,10 +40,12 @@
     "content-type": "^1.0.5",
     "cookie": "^0.7.2",
     "cookie-signature": "^1.2.2",
+    "cors": "^2.8.5",
     "create-require": "^1.1.1",
     "debug": "^4.4.3",
     "depd": "^2.0.0",
     "diff": "^4.0.2",
+    "dotenv": "^17.2.2",
     "dunder-proto": "^1.0.1",
     "dynamic-dedupe": "^0.3.0",
     "ee-first": "^1.1.1",
@@ -43,6 +56,7 @@
     "escape-html": "^1.0.3",
     "etag": "^1.8.1",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.1.0",
     "fill-range": "^7.1.1",
     "finalhandler": "^2.1.0",
     "forwarded": "^0.2.0",
@@ -56,6 +70,7 @@
     "gopd": "^1.2.0",
     "has-symbols": "^1.1.0",
     "hasown": "^2.0.2",
+    "helmet": "^8.1.0",
     "http-errors": "^2.0.0",
     "iconv-lite": "^0.6.3",
     "inflight": "^1.0.6",
@@ -67,6 +82,7 @@
     "is-glob": "^4.0.3",
     "is-number": "^7.0.0",
     "is-promise": "^4.0.0",
+    "joi": "^18.0.1",
     "make-error": "^1.3.6",
     "math-intrinsics": "^1.1.0",
     "media-typer": "^1.1.0",
@@ -76,6 +92,7 @@
     "minimatch": "^3.1.2",
     "minimist": "^1.2.8",
     "mkdirp": "^1.0.4",
+    "mongoose": "^8.18.2",
     "ms": "^2.1.3",
     "negotiator": "^1.0.0",
     "normalize-path": "^3.0.0",
